# rust-stm32f446-blinky

./: Cargo.toml  README.md  flash_device.sh  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
