[package]
name = "rust-stm32f466-blinky"
version = "0.1.1"
authors = ["Konrad Krenzlin <git@krenzlin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f446"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[[bin]]
name = "blinky"
path = "src/main.rs"
test = false
bench = false
